--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:justinmandac/earthquake-philvocs.git"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^0.22.0",
     "express": "latest",
+    "mysql": "^2.13.0",
     "request": "latest"
   }
 }
